--- a/style/index.css
+++ b/style/index.css
@@ -50,24 +50,29 @@ fieldset >div {
    font-size: 16px;
    cursor: pointer;
 }
-.parent {
+#empSection {
     display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 30px ;
   margin-bottom: 30px;
 }
-.parent #empSection {
-    flex: 0 0 25%;
-    max-width: 25%;
+#empSection .show{
+    flex: 25%;
+    max-width: 20%;
 text-align: center;
+margin: 20px;
 padding: 10px;
-border-radius: 4px;
+border-radius: 15px;
 background-color: #477D57
 }
-.parent #empSection img {
-    max-width: 100%;
-    height: auto;}
+#empSection .show img {
+    width: 150px;
+    height: 150px;
+}
+#empSection .show h3{
+color: #fff;
+}
 footer {
     width: 100%;
     background-color: #C4C4C4;
